# rust-rag

./: .$diagram.drawio.bkp  .env_example  Cargo.toml  README.md  diagram.drawio  vectors.txt
migrations/: 20251225091733_create_users_table.up.sql  20251225092239_create_documents_table.down.sql  20251225092239_create_documents_table.up.sql  20260101031426_create_conversations_table.down.sql  20260101031426_create_conversations_table.up.sql  20260101032148_create_messages_tables.down.sql  20260101032148_create_messages_tables.up.sql
src/: lib.rs  old_main.rs  technote.md
src/app_auth/: mod.rs
src/app_auth/domain/: auth_domain.rs  mod.rs
src/app_auth/handler/: auth_handler.rs  map_usecase_error.rs  mod.rs  types.rs  validate_request.rs
src/app_auth/repository/: auth_repository.rs
src/app_auth/usecase/: auth_usecase.rs  helper.rs  mod.rs  types.rs
src/app_chat/: mod.rs
src/app_chat/domain/: chat_conversation.rs  chat_message.rs  error.rs  mod.rs
src/app_chat/handler/: mod.rs  (+3 more)
src/app_profile/: mod.rs
src/config/: environment.rs  kafka_consumer.rs  minio.rs  mod.rs  postgre.rs
src/document_parser/: mod.rs
src/domain/: embedder.rs  mod.rs
src/error/: embedder.rs  mod.rs  pdf_parser.rs
src/helper/: builder.rs  helper.rs  mod.rs
src/infrastructure/: mod.rs
src/middleware/: atuh_middleware.rs  mod.rs
src/repository/: mod.rs
src/request/: mod.rs  pagination.rs  path_uuid.rs  safe_query.rs
src/response/: error.rs  mod.rs  success.rs
src/route/: auth_route.rs  chat_route.rs  document_route.rs  mod.rs  profile_route.rs
src/usecase/: mod.rs
(+80 files in other folders)
